fixes turbolinks map issue

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
 			= tab_to "Our results", projects_path
 			= tab_to "Log book", blog_posts_path
 			= tab_to "Careers", jobs_path
-			= tab_to "Contact", contact_path
+			= tab_to "Contact", contact_path, 'data-no-turbolink' => true
 	  
 
 
