--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -2,10 +2,10 @@
 
 #contact-header {
 	height: 210px;
-	background-color: #38A8CC;
+	background-color: $grey-white;
 
 	h1 {
-		color: white;
+		color: #535353;
 		margin-top: 80px;
 	}
 }
@@ -43,7 +43,7 @@
 		padding-left: 20px;
 		font-size: 18px;
 		font-family: "Merriweather Sans", sans-serif;
-		color: $text-grey;
+		color: #535353;
 	}
 
 	input {
