adds mouseover effects on project page

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -71,6 +71,11 @@
   color: #E9F6F3;
 }
 
+.blanco {
+  border-color: #FFFFFF;
+  color: #FFFFFF;
+}
+
 .blue {
   border-color: #A2B8C2;
   color: #A2B8C2;
