--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
 		%ul#main-nav
 			// = tab_to "HOME", root_path,
 			= tab_to "Get to know us", about_path, active_tab("#{about_path}$")
-			= tab_to "Our results", projects_path, active_tab("#{projects_path}$")
+			= tab_to "Our work", projects_path, active_tab("#{projects_path}$")
 			= tab_to "Log book", blog_posts_path, active_tab("#{blog_posts_path}$")
 			= tab_to "Careers", jobs_path, active_tab("#{jobs_path}$")
 			= tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true})
