--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -3,20 +3,31 @@
     %h1 Simple is better than complex.
 %div#recent-work
   #our-work-text.row
-    %h3 Our Work
+    %h3 Recent Work
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
   .row
     #closeoutbike-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study
       #closeoutbike-result-image
+
     #mobilizeart-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study
       #mobilizeart-result-image
   .row
     #gigdog-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study      
       #gigdog-result-image
     #greeneggs-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study      
       #greeneggs-result-image
   .row
     #textus-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study
       #textus-result-image
     #lastproject-box.column.five
       #lastproject-result-image  
