--- a/app/views/home/closeoutbikes_case_study.html.haml
+++ b/app/views/home/closeoutbikes_case_study.html.haml
@@ -1,7 +1,7 @@
-%div#tagline
+%div#tagline.closeoutbikes
 	.row
 		%h3 Your bicycle shopping gets easier!
-		#project-screen
+		#project-screen.closeoutbikes
 %div#about-project
 	.row
 		.column.seven
