--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,7 +10,7 @@
     #first-project-description.column.two
       %h3 CloseoutBike
       %h4 We practice perfect simplicity, crafting designs that fulfill the needs of your users, without wasting anyone's time or money.
-      = link_to case_study_path, :class => "a-case-study-button gray" do
+      = link_to closeoutbikes_case_study_path, :class => "a-case-study-button gray" do
         View case study
 
 %div#second-project
