--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -18,7 +18,7 @@
     #second-project-description.column.two
       %h3 MobilizeArt
       %h4 Connect your customers with your market, not your website. Technology is a tool that gets out of the way when used right.
-      = link_to case_study_path, :class => "a-case-study-button teal" do
+      = link_to mobilizeart_case_study_path, :class => "a-case-study-button teal" do
         View case study
     #project-image.column.two
       %h1#second-project-logo
@@ -30,7 +30,7 @@
     #third-project-description.column.two
       %h3 Gigdog
       %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way.
-      = link_to case_study_path, :class => "a-case-study-button blue" do
+      = link_to gigdog_case_study_path, :class => "a-case-study-button blue" do
         View case study
 
 %div#fourth-project
