--- a/app/views/home/mobilizeart_case_study.html.haml
+++ b/app/views/home/mobilizeart_case_study.html.haml
@@ -1,7 +1,7 @@
-%div#tagline.textus
+%div#tagline.mobilizeart
 	.row
-		%h3 Text Messaging for Business.
-		#project-screen.textus
+		%h3 Reimagine your relationship with art.
+		#project-screen.mobilizeart
 %div#about-project
 	.row
 		.column.seven
@@ -17,16 +17,16 @@
 
 #textus-steps
 	.row
-		#cs-circle.purple
+		#cs-circle.teal
 			%h1 1
 		%h4 The TextUs Reception Manager eliminates those awkward moments when a guest feels stranded in an unknown office. The iPad application allows guests to check in and notify the right parties, thus lowering costs for a business and taking the burden off busy receptionists.
 	.row
-		#cs-circle.purple
+		#cs-circle.teal
 			%h1 2
 	.row
 		%h4 Mike Hickman (CTO of TextUs), a friend of the family and Coshx alum, needed some programming firepower to improve the app without busting his budget. An important question for any product developer is ‘how do I improve my application the most with the resources at hand’. Experienced programmers provide more than solid code, and we worked closely with TextUs to identify the easy and essential wins and parse out the ‘nice to have’ improvements. We have been known to write code for fun, but never on our clients dime. <br><br> The team at TextUs had developed a beautiful interface for visitors, and the most pressing needs related to the businesses that would use (and pay for) the application. This included adding photos and search functionality to the guest book, making it easier for recipients in the office to reply to visitors, and implementing a new payment processor.
 	.row
-		#cs-circle.purple
+		#cs-circle.teal
 			%h1 3
 	.row
 		%h4 The new version of the app launched seamlessly and captured the attention (and dollars) of a high profile client that loved the service.  An application is only successful when it accomplishes the tasks of all the users, but the business is only successful when the application is built in a cost effective manner.  We strive to ensure that our clients get the most out of our time, as we measure ourselves by the success and satisfaction of our partners, and not by our bottom line alone.
