reformats case studies

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,17 +7,17 @@
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
   .row
     #closeoutbike-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
+      = link_to closeoutbikes_case_study_path, :class => "a-case-study-button blanco" do
         View case study
       #closeoutbike-result-image
 
     #mobilizeart-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
+      = link_to mobilizeart_case_study_path, :class => "a-case-study-button blanco" do
         View case study
       #mobilizeart-result-image
   .row
     #gigdog-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
+      = link_to gigdog_case_study_path, :class => "a-case-study-button blanco" do
         View case study      
       #gigdog-result-image
     #greeneggs-box.column.five
@@ -26,7 +26,7 @@
       #greeneggs-result-image
   .row
     #textus-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
+      = link_to textus_case_study_path, :class => "a-case-study-button blanco" do
         View case study
       #textus-result-image
     #lastproject-box.column.five
