--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -52,81 +52,25 @@
 	background: image-url("gigdog_laptop.png") no-repeat;
 }
 
-#about-project {
-	height: 450px;
+#case-study-middle-row {
+	height: 210px;
 	padding-top: 160px;
 	background-color: $grey-white;
 	z-index: 1;
 	position: relative;
-
-	h4 {
-		color: $text-grey;
-	}
-
-	.row .column.seven {
-		padding-left: 50px;
-		padding-right: 40px;
-	}
-
-	.row .column.five {
-		padding-left: 10px;
-		padding-right: 50px;
-	}
 }
 
-#cs-circle {
-	border-radius: 50%;
-	width: 40px;
-	height: 40px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: -90px;
-	h1 {
-		color: white;
-		font-size: 22px;
-		font-weight: normal;
-		padding-top: 3px; 
-	} 
-}
-
-#cs-circle.purple {
-	background-color: #922b8d;
-}
-
-#cs-circle.teal {
-	background-color: #75c6b2;
-}
-
-#cs-circle.blue {
-	background-color: #164d67;
-}
-
-#textus-summary {
-  background: #FFFFFF;
-  text-align: center;
+#case-study-steps {
   padding-top: 70px;
-  height: 100%;
-
-  h3 {
-    margin-top: 0px;
-    color: #535353;
-  }
-  h4 {
-    margin-top: 20px;
-    color: $text-grey;
-    margin-left: 200px;
-    margin-right: 200px;
-  }
-}
-
-#textus-steps {
-  background: #FFFFFF;
-  text-align: center;
-  padding-top: 50px;
   height: 100%;
   padding-bottom: 50px;
   border-bottom: 1px solid #e9e9e9;
 
+  .row {
+  	width: 833px;
+  	margin-left: auto;
+  	margin-right: auto;
+  }
 
   h3 {
     margin-top: 0px;
@@ -135,8 +79,6 @@
   h4 {
     margin-top: 20px;
     color: $text-grey;
-    margin-left: 200px;
-    margin-right: 200px;
     margin-bottom: 50px;
   }
 }
