--- a/app/views/home/gigdog_case_study.html.haml
+++ b/app/views/home/gigdog_case_study.html.haml
@@ -2,33 +2,19 @@
 	.row
 		%h3 Music comes home.
 		#project-screen.gigdog
-%div#about-project
-	.row
-		.column.seven
-			%h5 About the Project
-			%h4 TextUs is a company that provides business-to-business applications that focus around the innovative use of SMS messages as a means for coordination. Their application Reception Messenger is an iOS application that lets you use an iPad as a receptionist and do things like inform contacts that a visitor has arrived, handle deliveries from postal and private carriers, and keep a log of visitors.
-			%h4 
-		.column.five
-			%h5 Our Role
-			%h4  Our part in the project was adding several features to the site with a timespan of about two work weeks which are explained in detail for you to read further down.
-%div#textus-summary
-	%h3 Summary of the Project
-	%h4 We had the pleasure of adding several features to the site with a timespan of about two work weeks. Our own Dave Kapp was in charge of making things work out.
+%div#case-study-middle-row
 
-#textus-steps
+#case-study-steps
 	.row
-		#cs-circle.blue
-			%h1 1
-		%h4 The TextUs Reception Manager eliminates those awkward moments when a guest feels stranded in an unknown office. The iPad application allows guests to check in and notify the right parties, thus lowering costs for a business and taking the burden off busy receptionists.
+		%h3 The Product
+		%h4 A live music promoter had a compelling vision; an internet radio station that played music from bands with upcoming gigs in the area. The goal was to increase ticket sales at local venues by exposing listeners to new music.
 	.row
-		#cs-circle.blue
-			%h1 2
+		%h3 The Project
+		%h4 Building an application is not difficult, but building the right application is the challenge of any startup. Our initial planning session pinpointed the primary business needs and uncovered assumptions about how individuals will use the site.  We built the Minimum Viable Product by focusing on the core functionality, and then we made it look pretty and released GigDog to the public. We wanted to test our assumptions by learning from the end user, rather than build the entire site in stealth mode. <br><br> We began a rigorous testing program in order to understand user behavior and optimize all aspects of the site. We thought, for example, that a tutorial would decrease the time between users landing on the site and listening to music, so we built one. By releasing two versions of GigDog (one with the tutorial and one without) to two cohorts of new users we began gathering sweet, sweet data. The data showed that we were wrong, and that the tutorial increased the time it took for a user to hit ‘play’.<br><br> Although our pride was a little hurt, this validated learning is exactly what we wanted to gain from testing. By conducting similar tests on other functions we know that every piece of GigDog exists because it increases the user experience, not because we thought it might. Rather than passively writing code, we used our expertise to analyze data and help the entrepreneur make better, more informed decisions for his business.
 	.row
-		%h4 Mike Hickman (CTO of TextUs), a friend of the family and Coshx alum, needed some programming firepower to improve the app without busting his budget. An important question for any product developer is ‘how do I improve my application the most with the resources at hand’. Experienced programmers provide more than solid code, and we worked closely with TextUs to identify the easy and essential wins and parse out the ‘nice to have’ improvements. We have been known to write code for fun, but never on our clients dime. <br><br> The team at TextUs had developed a beautiful interface for visitors, and the most pressing needs related to the businesses that would use (and pay for) the application. This included adding photos and search functionality to the guest book, making it easier for recipients in the office to reply to visitors, and implementing a new payment processor.
+		%h3 The Results
+		%h4 GigDog is going strong and expanding to cities across the United States, but that does not mean our work is done. We continue to add functionality and run tests to optimize key metrics, such as the number of recurring users and the time spent on the site. We have helped an entrepreneur achieve his dream, helped venues and bands increase tickets sales, and exposed countless listeners to new music (just kidding, we count everything).
 	.row
-		#cs-circle.blue
-			%h1 3
-	.row
-		%h4 The new version of the app launched seamlessly and captured the attention (and dollars) of a high profile client that loved the service.  An application is only successful when it accomplishes the tasks of all the users, but the business is only successful when the application is built in a cost effective manner.  We strive to ensure that our clients get the most out of our time, as we measure ourselves by the success and satisfaction of our partners, and not by our bottom line alone.
+		= button_to "view the site", 'http://www.gigdog.fm', :class => "btn blue center top-margin-small", :method => :get
 
 
