--- a/app/views/home/closeoutbikes_case_study.html.haml
+++ b/app/views/home/closeoutbikes_case_study.html.haml
@@ -2,29 +2,18 @@
 	.row
 		%h3 Your bicycle shopping gets easier!
 		#project-screen.closeoutbikes
-%div#about-project
+%div#case-study-middle-row
+
+#case-study-steps
 	.row
-		.column.seven
-			%h5 About the project
-			%h4 Closeoutbikes is a file synchronization and storage service and the new home for the popular Google Docs - a suite of productivity applications, that offer collaborative editing on presentations, spreadsheets, and more. This service is hugely popular with consumers and businesses - it is used to safely store everything from family photo albums to international trade secrets.
-		.column.five
-			%h5 Our Role
-			%h4 Closeoutbikes Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorum Ipsum has been the industry's standard dummy text since the 1950s.
-%div#logo-versions
+		%h3 The Product
+		%h4 The TextUs Reception Manager eliminates those awkward moments when a guest feels stranded in an unknown office. The iPad application allows guests to check in and notify the right parties, thus lowering costs for a business and taking the burden off busy receptionists.
 	.row
-		%h3 The Logo
-		%h4 CloseoutBike Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorum Ipsum has been the industry's standard dummy text since the 1950s.
-		#selectors
-		#logo-options
-		#arrow-down
-		#selected-logo
-%div#project-design
+		%h3 The Project
+		%h4 Mike Hickman (CTO of TextUs), a friend of the family and Coshx alum, needed some programming firepower to improve the app without busting his budget. An important question for any product developer is ‘how do I improve my application the most with the resources at hand’. Experienced programmers provide more than solid code, and we worked closely with TextUs to identify the easy and essential wins and parse out the ‘nice to have’ improvements. We have been known to write code for fun, but never on our clients dime. <br><br> The team at TextUs had developed a beautiful interface for visitors, and the most pressing needs related to the businesses that would use (and pay for) the application. This included adding photos and search functionality to the guest book, making it easier for recipients in the office to reply to visitors, and implementing a new payment processor.
 	.row
-		%h3 The Website Design
-		%h4 CloseoutBike Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorum Ipsum has been the industry's standard dummy text since the 1950s.
-		#design-image
-		%h4 CloseoutBike Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorum Ipsum has been the industry's standard dummy text since the 1950s.
-		%br
-		%br
-		= button_to "visit the site", "http://www.closeoutbikes.com", :class => "btn blue center top-margin-small", :method => :get
+		%h3 The Results
+		%h4 The new version of the app launched seamlessly and captured the attention (and dollars) of a high profile client that loved the service.  An application is only successful when it accomplishes the tasks of all the users, but the business is only successful when the application is built in a cost effective manner.  We strive to ensure that our clients get the most out of our time, as we measure ourselves by the success and satisfaction of our partners, and not by our bottom line alone.
+	.row
+		= button_to "view the site", 'http://www.closeoutbikes.com', :class => "btn blue center top-margin-small", :method => :get
 
