adds scheduleshare to projects page

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -149,13 +149,23 @@
 }
 
 .blue {
-  border-color: #A2B8C2;
-  color: #FFFFFF;
+  border-color: #8EA3AD;
+  color: #8EA3AD;
 }
 
 .green {
   border-color: #F1F6E9;
   color: #F1F6E9;
+}
+
+.black {
+  border-color: #858585;
+  color: #858585;
+}
+
+.purple {
+  border-color: #CB8AC8;
+  color: #CB8AC8;
 }
 
 .a-button {
