--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,9 +36,20 @@
 %div#fourth-project
   .row
     #fourth-project-description.column.two
-      %h3 GreenEggs
+      %h3 ScheduleShare
       %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
-      = link_to case_study_path, :class => "a-case-study-button green" do
+      = link_to case_study_path, :class => "a-case-study-button black" do
         View case study
     #project-image.column.two
       %h1#fourth-project-logo
+
+%div#fifth-project
+  .row
+    #project-image.column.two
+      %h1#fifth-project-logo
+    #fifth-project-description.column.two
+      %h3 TextUs
+      %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
+      = link_to textus_case_study_path, :class => "a-case-study-button purple" do
+        View case study
+
