--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -29,5 +29,7 @@
       = link_to textus_case_study_path, :class => "a-case-study-button blanco" do
         View case study
       #textus-result-image
-    #lastproject-box.column.five
-      #lastproject-result-image  
+    #scheduleshare-box.column.five
+      = link_to case_study_path, :class => "a-case-study-button blanco" do
+        View case study      
+      #scheduleshare-result-image 
