--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -92,13 +92,13 @@
   background-color: #922b8d;
 }
 
-#lastproject-box {
+#scheduleshare-box {
   width: 400px;
   height: 300px;
   margin-bottom: 35px;
   margin-right: 150px;
   z-index: 0;
-  background-color: $grey-white;
+  background-color: #2c2c2c;
 }
 
 
@@ -144,6 +144,16 @@
 
 #textus-result-image {
   background: image-url("textus_result.png") no-repeat;
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 332px;
+  height: 239px;
+}
+
+#scheduleshare-result-image {
+  background: image-url("scheduleshare_result.png") no-repeat;
   z-index: 1;
   position: absolute;
   right: 0;
