--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -148,10 +148,15 @@
   color: #FFFFFF;
 }
 
-.blue {
+.light-blue {
   border-color: #8EA3AD;
   color: #8EA3AD;
 }
+
+.blue {
+  color: #FFFFFF;
+}
+
 
 .green {
   border-color: #F1F6E9;
