--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,7 +30,7 @@
     #third-project-description.column.two
       %h3 Gigdog
       %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way.
-      = link_to gigdog_case_study_path, :class => "a-case-study-button blue" do
+      = link_to gigdog_case_study_path, :class => "a-case-study-button light-blue" do
         View case study
 
 %div#fourth-project
