--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -21,7 +21,7 @@
         View case study      
       #gigdog-result-image
     #greeneggs-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
+      = link_to greeneggs_case_study_path, :class => "a-case-study-button blanco" do
         View case study      
       #greeneggs-result-image
   .row
@@ -33,3 +33,8 @@
       = link_to case_study_path, :class => "a-case-study-button blanco" do
         View case study      
       #scheduleshare-result-image 
+  .row
+    #old-site-box.column.five
+      = link_to "http://coshx.github.io", :class => "a-case-study-button blanco" do
+        View website
+      #old-site-result-image
