--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -76,6 +76,14 @@
   height: 60px;
 }
 
+.btn.light-grey {
+  background-color: #f0efee;
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 16px;
+  width: 300px;
+  height: 60px;
+}
+
 .btn.blue:hover {
   color: #fff;
   background-color: #545454;
