--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -13,7 +13,7 @@
 #recent-work {
   background: #FFFFFF;
   text-align: center;
-  height: 1230px;
+  height: 1560px;
   padding-top: 50px;
 
   border-bottom: 1px solid #e9e9e9;
@@ -101,6 +101,16 @@
   background-color: #2c2c2c;
 }
 
+#old-site-box {
+  width: 840px;
+  height: 300px;
+  margin-bottom: 35px;
+  z-index: 0;
+  margin-left: 150px;
+  margin-right: 150px;
+  background-color: #fbaf3f;
+}
+
 
 #closeoutbike-result-image {
   background: image-url("closeoutbikes_result.png") no-repeat;
@@ -160,4 +170,14 @@
   bottom: 0;
   width: 332px;
   height: 239px;
+}
+
+#old-site-result-image {
+  background: image-url("old_site_result.png") no-repeat;
+  z-index: 1;
+  position: absolute;
+  right: 248px;
+  bottom: 20px;
+  width: 344px;
+  height: 261px;
 }
