--- a/app/views/home/gigdog_case_study.html.haml
+++ b/app/views/home/gigdog_case_study.html.haml
@@ -15,6 +15,6 @@
 		%h3 The Results
 		%h4 GigDog is going strong and expanding to cities across the United States, but that does not mean our work is done. We continue to add functionality and run tests to optimize key metrics, such as the number of recurring users and the time spent on the site. We have helped an entrepreneur achieve his dream, helped venues and bands increase tickets sales, and exposed countless listeners to new music (just kidding, we count everything).
 	.row
-		= button_to "view the site", 'http://www.gigdog.fm', :class => "btn blue center top-margin-small", :method => :get
+		= link_to "view the site", 'http://www.gigdog.fm', :class => "btn blue center top-padding top-margin-small", :target => "_blank", :method => :get
 
 
