--- a/app/views/home/textus_case_study.html.haml
+++ b/app/views/home/textus_case_study.html.haml
@@ -15,4 +15,4 @@
 		%h3 The Results
 		%h4 The new version of the app launched seamlessly and captured the attention (and dollars) of a high profile client that loved the service.  An application is only successful when it accomplishes the tasks of all the users, but the business is only successful when the application is built in a cost effective manner.  We strive to ensure that our clients get the most out of our time, as we measure ourselves by the success and satisfaction of our partners, and not by our bottom line alone.
 	.row
-		= button_to "view the site", 'http://www.textus.biz', :class => "btn blue center top-margin-small", :method => :get
+		= link_to "view the site", 'http://www.textus.biz', :class => "btn blue center top-padding top-margin-small", :target => "_blank", :method => :get
