--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -35,6 +35,6 @@
       #scheduleshare-result-image 
   .row
     #old-site-box.column.five
-      = link_to "http://coshx.github.io", :class => "a-case-study-button blanco" do
+      = link_to "http://coshx.github.io", :class => "a-case-study-button blanco", :target => "_blank" do
         View website
       #old-site-result-image
