fixes mouseovers on project page

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,34 +7,41 @@
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
   .row
     #closeoutbike-box.column.five
-      = link_to closeoutbikes_case_study_path, :class => "a-case-study-button blanco" do
-        View case study
+      #darken-box
+        = link_to closeoutbikes_case_study_path, :class => "a-case-study-button blanco" do
+          View case study
       #closeoutbike-result-image
 
     #mobilizeart-box.column.five
-      = link_to mobilizeart_case_study_path, :class => "a-case-study-button blanco" do
-        View case study
+      #darken-box
+        = link_to mobilizeart_case_study_path, :class => "a-case-study-button blanco" do
+          View case study
       #mobilizeart-result-image
   .row
     #gigdog-box.column.five
-      = link_to gigdog_case_study_path, :class => "a-case-study-button blanco" do
-        View case study      
+      #darken-box
+        = link_to gigdog_case_study_path, :class => "a-case-study-button blanco" do
+          View case study      
       #gigdog-result-image
     #greeneggs-box.column.five
-      = link_to greeneggs_case_study_path, :class => "a-case-study-button blanco" do
-        View case study      
+      #darken-box
+        = link_to greeneggs_case_study_path, :class => "a-case-study-button blanco" do
+          View case study      
       #greeneggs-result-image
   .row
     #textus-box.column.five
-      = link_to textus_case_study_path, :class => "a-case-study-button blanco" do
-        View case study
+      #darken-box
+        = link_to textus_case_study_path, :class => "a-case-study-button blanco" do
+          View case study
       #textus-result-image
     #scheduleshare-box.column.five
-      = link_to case_study_path, :class => "a-case-study-button blanco" do
-        View case study      
+      #darken-box
+        = link_to case_study_path, :class => "a-case-study-button blanco" do
+          View case study      
       #scheduleshare-result-image 
   .row
     #old-site-box.column.five
-      = link_to "http://coshx.github.io", :class => "a-case-study-button blanco", :target => "_blank" do
-        View website
+      #darken-box
+        = link_to "http://coshx.github.io", :class => "a-case-study-button blanco", :target => "_blank" do
+          View website
       #old-site-result-image
