--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -31,19 +31,28 @@
   a {
     display: none;
     position: relative;
-    z-index: 2;
+    z-index: 3;
     margin-top: 135px;
   }
 
   .column.five:hover {
-    -webkit-filter: brightness(0.5);
-    -moz-filter: brightness(0.5);
-    -o--filter: brightness(0.5);
     a {
-      -webkit-filter: brightness(0);
       display: inline-block;
     }
   }
+}
+
+#darken-box {
+  background-color: black;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  opacity: 0;
+}
+
+#darken-box:hover {
+  opacity: 0.7;
 }
 
 #closeoutbike-box {
